# MCP-Whatsapp

./: README.md
whatsapp-mcp-server/: .env  client.py  pyproject.toml
